Fixed horizontal scrollbar on small devices

--- a/web/css/layout/_content.less
+++ b/web/css/layout/_content.less
@@ -25,7 +25,7 @@
         position: relative;
         display: grid;
         grid-template-rows: auto 1fr;
-        grid-template-columns: 100%;
+        grid-template-columns: 1fr;
         grid-template-areas: "main"
                              "sidebar"
                              "additional";
@@ -57,6 +57,7 @@
 
         > .main {
             grid-area: main;
+            min-width: 0
         }
         > .sidebar-main {
             grid-area: sidebar;
